Text sizing issues on mobile

--- a/resources/css/style2.css
+++ b/resources/css/style2.css
@@ -8,7 +8,7 @@ header {
     background-color: #0C0E4E;
     border-bottom: 1px solid #07AAB4;
     position: fixed;
-    padding: 0 2rem;
+    padding: 1rem 2rem;
     top: 0px;
     width: 100vw;
     display: flex;
@@ -18,12 +18,6 @@ header {
     height: 15vh;
 }
 
-
-header a{
-    text-decoration: none;
-    color: white;
-}
-
 .navbar-brand {
     display: flex;
     align-items: center;
@@ -31,11 +25,11 @@ header a{
 }
 
 .logo-image{
-    height: 10vh;
+    height: 8vh;
 }
 
 .logo-text {
-    height: 5vh;
+    height: 3vh;
     padding-left: 0.5rem;
 }
 
@@ -51,7 +45,9 @@ nav a {
     height: 100%;
     box-sizing: border-box;
     padding: 0.4rem;
-    font-size: 1.25rem;
+    font-size: 2rem;
+    text-decoration: none;
+    color: white;
 }
 
 nav a:hover{
